--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,19 +12,26 @@
   <body>
 
     <header>
-      <h1>
-        <%= link_to root_path do %>
-        <%= image_tag "bien-logo.svg" %>
-        <% end %>
-      </h1>
-      <h2>The best restaurants in the world</h2>
+
+      <nav>
+        <h1>
+          <%= link_to root_path do %>
+          <%= image_tag "bien-logo.svg" %>
+          <% end %>
+        </h1>
+      </nav>
+
       <nav>
         <%= link_to "Add a review", new_review_path %>
       </nav>
+
     </header>
 
-
+    <main>
     <%= yield %>
+    <!-- 'yield' prints out our pages, puts our index.html within the body tag -->
+    </main>
+
 
 
 
