--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bien Reviews - the best restaurants in the world</title>
+    <title>
+      <%= content_for :page_title %> - Bien reviews
+    </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
