--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,5 @@
 <% content_for :page_title, "Add a new review" %>
+<!-- we use a string here "Add a new review" -->
 
 <h3>Add your new restaurant review</h3>
 
