--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -15,6 +15,19 @@
   </div>
 <% end %>
 
+<% if @review.price.present? %>
+  <div class="price">
+    Price: <%= @review.price %>
+  </div>
+<% end %>
+
+<% if @review.cuisine.present? %>
+  <div class="cuisine">
+    Cuisine: <%= @review.cuisine %>
+  </div>
+<% end %>
+
+
 <div class="body">
   <%= simple_format @review.body %>
 </div>
