--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -23,6 +23,16 @@
 </p>
 
 <p>
+  <%= f.label :price %>
+  <%= f.number_field :price%>
+</p>
+
+<p>
+  <%= f.label :cuisine %>
+  <%= f.text_field :cuisine%>
+</p>
+
+<p>
 <%= f.label :body %>
 <%= f.text_area :body %>
 </p>
@@ -36,6 +46,7 @@
   <%= f.label :ambiance %>
   <%= f.text_field :ambiance%>
 </p>
+
 
 
 <%= f.submit "Save review" %>
