--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,6 +1,23 @@
 
+
+<% content_for :page_title, "Homepage" %>
+
+<nav class="filters">
+  <%= link_to "All restaurants", root_path %>
+  <%= link_to "$", root_path(price: 1, cuisine: @cuisine) %>
+  <%= link_to "$$", root_path(price: 2, cuisine: @cuisine) %>
+  <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine) %>
+
+  <%= link_to "Italian", root_path(cuisine: "Italian", price: @price) %>
+  <%= link_to "Thai", root_path(cuisine: "Thai", price: @price) %>
+  <%= link_to "Mexican", root_path(cuisine: "Mexican", price: @price) %>
+    <%= link_to "BBQ", root_path(cuisine: "BBQ", price: @price) %>
+
+</nav>
+
 <% @reviews.each do |review| %>
+
 <div class="review">
-<%= link_to review.title, review_path(review) %>
+  <%= link_to review.title, review_path(review) %>
 </div>
 <% end %>
