--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -23,6 +23,11 @@
 </p>
 
 <p>
+  <%= f.label :address %>
+  <%= f.text_field :address %>
+</p>
+
+<p>
   <%= f.label :price %>
   <%= f.number_field :price%>
 </p>
