--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -3,15 +3,26 @@
 <% content_for :page_title, "Homepage" %>
 
 <nav class="filters">
-  <%= link_to "All restaurants", root_path %>
-  <%= link_to "$", root_path(price: 1, cuisine: @cuisine) %>
-  <%= link_to "$$", root_path(price: 2, cuisine: @cuisine) %>
-  <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine) %>
 
-  <%= link_to "Italian", root_path(cuisine: "Italian", price: @price) %>
-  <%= link_to "Thai", root_path(cuisine: "Thai", price: @price) %>
-  <%= link_to "Mexican", root_path(cuisine: "Mexican", price: @price) %>
-    <%= link_to "BBQ", root_path(cuisine: "BBQ", price: @price) %>
+  <div>
+  <%= link_to "All restaurants", root_path %>
+  <%= link_to "$", root_path(price: 1, cuisine: @cuisine, location: @location) %>
+  <%= link_to "$$", root_path(price: 2, cuisine: @cuisine, location: @location) %>
+  <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine, location: @location) %>
+  </div>
+
+<div>
+  <%= link_to "Italian", root_path(cuisine: "Italian", price: @price, location: @location) %>
+  <%= link_to "Thai", root_path(cuisine: "Thai", price: @price, location: @location) %>
+  <%= link_to "Mexican", root_path(cuisine: "Mexican", price: @price, location: @location) %>
+  <%= link_to "BBQ", root_path(cuisine: "BBQ", price: @price, location: @location) %>
+  </div>
+
+  <form action="/">
+    <input type="text" name="location" placeholder="Search location..." value =" <%= @location %> ">
+    <input type="hidden" name="price" value="<%= @price  %>" >
+    <input type="hidden" name="cuisine" value="<%= @cuisine  %>" >
+  </form>
 
 </nav>
 
