--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -5,17 +5,17 @@
 <nav class="filters">
 
   <div>
-  <%= link_to "All restaurants", root_path %>
-  <%= link_to "$", root_path(price: 1, cuisine: @cuisine, location: @location) %>
-  <%= link_to "$$", root_path(price: 2, cuisine: @cuisine, location: @location) %>
-  <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine, location: @location) %>
+  <%= active_link_to "All restaurants", root_path, active: {price: nil, cuisine: nil, location: nil} %>
+  <%= active_link_to "$", root_path(price: 1, cuisine: @cuisine, location: @location), active: {price: 1} %>
+  <%= active_link_to "$$", root_path(price: 2, cuisine: @cuisine, location: @location), active: {price: 2}  %>
+  <%= active_link_to "$$$", root_path(price: 3, cuisine: @cuisine, location: @location), active: {price: 3}  %>
   </div>
 
 <div>
-  <%= link_to "Italian", root_path(cuisine: "Italian", price: @price, location: @location) %>
-  <%= link_to "Thai", root_path(cuisine: "Thai", price: @price, location: @location) %>
-  <%= link_to "Mexican", root_path(cuisine: "Mexican", price: @price, location: @location) %>
-  <%= link_to "BBQ", root_path(cuisine: "BBQ", price: @price, location: @location) %>
+  <%= active_link_to "Italian", root_path(cuisine: "Italian", price: @price, location: @location), active: {cuisine: "Italian"} %>
+  <%= active_link_to "Thai", root_path(cuisine: "Thai", price: @price, location: @location), active: {cuisine: "Thai"}  %>
+  <%= active_link_to "Mexican", root_path(cuisine: "Mexican", price: @price, location: @location), active: {cuisine: "Mexican"}  %>
+  <%= active_link_to "BBQ", root_path(cuisine: "BBQ", price: @price, location: @location), active: {cuisine: "BBQ"}  %>
   </div>
 
   <form action="/">
@@ -29,6 +29,13 @@
 <% @reviews.each do |review| %>
 
 <div class="review">
-  <%= link_to review.title, review_path(review) %>
+  <%= link_to review_path(review) do %>
+  <h2><%= review.title %></h2>
+  <!-- use pluralize helper -->
+  <p><%= review.cuisine %> -
+     <%= pluralize review.comments.count, "comment" %>
+
+  </p>
+  <% end %>
 </div>
 <% end %>
