--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -2,8 +2,32 @@
 <!-- we use a symbol here -->
 
 <h1> <%= @review.title %> </h1>
-
 <h2> <%= @review.restaurant %> </h2>
+
+<% if is_logged_in? %>
+<p>
+  <% if @review.bookmarks.where(user: @current_user ).any? %>
+
+   <%= link_to "Unbookmark", review_bookmark_path(@review), method: :delete %>
+
+   <% else %>
+  <%= link_to "Bookmark", review_bookmark_path(@review), method: :post %>
+  <% end %>
+
+</p>
+<% end %>
+
+<div class="bookmark">
+
+  <h3>Bookmarked by...</h3>
+
+  <ul>
+    <% @review.bookmarks.each do |bookmark|  %>
+    <li><%= bookmark.user.username %></li>
+    <% end %>
+  </ul>
+
+</div>
 
 <div class="score">
   <%= @review.score %> / 10
@@ -27,23 +51,48 @@
   </div>
 <% end %>
 
+<div class="user">
+  Posted by
+  <% if @review.user.present? %>
+  <%= link_to @review.user.username, user_path(@review.user) %>
+  <% else %>
+  anonymous
+  <% end %>
+</div>
 
 <div class="body">
   <%= simple_format @review.body %>
 </div>
 
+<% if @review.user == @current_user %>
 <div class="actions">
   <%= link_to "Edit this review", edit_review_path(@review) %>
   <%= link_to "Delete this review", review_path(@review), method: :delete, data: {confirm: "Are you sure??"} %>
 </div>
+<% end %>
 
 <h3>Comments</h3>
 
 <% @review.comments.order("created_at desc").each do |comment| %>
   <div class="comment">
+
     <%= simple_format comment.body %>
-  </div>
+
+    <p class="posted">
+      Posted by
+
+      <% if comment.user.present? %>
+      <%= link_to comment.user.username, user_path(comment.user) %>
+
+      <% else %>
+      anonymous
+      <% end %>
+
+    </p>
+
   <p class="posted">Posted at <%= time_ago_in_words comment.created_at %> ago </p>
+  </div>
+
   <% end %>
 
 <h3>Add a comment</h3>
