--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -27,10 +27,12 @@
 </nav>
 
 <% @reviews.each do |review| %>
-
 <div class="review">
   <%= link_to review_path(review) do %>
+
   <h2><%= review.title %></h2>
+
+<%= image_tag review.photo.thumb.url %>
   <!-- use pluralize helper -->
   <p><%= review.cuisine %> -
      <%= pluralize review.comments.count, "comment" %>
