--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,6 +1,15 @@
 <% content_for :page_title, @review.title %>
 <!-- we use a symbol here -->
 
+
+<% if @review.photo.present? %>
+  <%= image_tag @review.photo.thumb.url %>
+  <% end %>
+
+
+
+
+
 <h1> <%= @review.title %> </h1>
 <h2> <%= @review.restaurant %> </h2>
 
@@ -66,7 +75,9 @@
 
 <% if @review.user == @current_user %>
 <div class="actions">
+  <% if @review.created_at > 1.hour.ago %>
   <%= link_to "Edit this review", edit_review_path(@review) %>
+  <% end %>
   <%= link_to "Delete this review", review_path(@review), method: :delete, data: {confirm: "Are you sure??"} %>
 </div>
 <% end %>
