--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,11 +2,13 @@
 <%= f.input :title %>
 <%= f.input :restaurant %>
 <%= f.input :address %>
+<%= f.input :photo %>
 <%= f.input :price %>
 <%= f.input :cuisine %>
 <%= f.input :body %>
 <%= f.input :score %>
 <%= f.input :ambiance %>
+
 
 <%= f.button :submit %>
 <% end %>
