--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
       <nav>
         <% if is_logged_in? %>
 
+        <%= image_tag @current_user.avatar.url %>
         <%= @current_user.email %>
 
         <% if @current_user.is_admin? %>
@@ -33,6 +34,7 @@
         <% end %>
 
         <%= link_to "Add a review", new_review_path %>
+        <%= link_to "Edit account", edit_account_path %>
         <%= link_to "Log out", session_path, method: :delete %>
 
 
@@ -48,6 +50,12 @@
       </nav>
 
     </header>
+
+<% if flash[:success].present? %>
+<div class="success">
+      <%= flash[:success] %>
+</div>
+    <% end %>
 
     <main>
     <%= yield %>
