--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       <nav>
         <% if is_logged_in? %>
 
-        <%= image_tag @current_user.avatar.url %>
+        <%= image_tag @current_user.avatar.url, :class => "avatar" %>
         <%= @current_user.email %>
 
         <% if @current_user.is_admin? %>
